--- a/package.json
+++ b/package.json
@@ -85,15 +85,20 @@
     "@shikijs/vscode-textmate": "^9.3.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@tabler/icons-react": "^3.14.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-table": "^8.20.5",
-    "@tiptap/extension-color": "^2.6.6",
-    "@tiptap/extension-image": "^2.6.6",
-    "@tiptap/extension-placeholder": "^2.6.6",
-    "@tiptap/extension-text-style": "^2.6.6",
-    "@tiptap/extension-underline": "^2.6.6",
-    "@tiptap/react": "^2.6.6",
-    "@tiptap/starter-kit": "^2.6.6",
-    "@tiptap/suggestion": "^2.6.6",
+    "@tiptap/core": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
+    "@tiptap/extension-horizontal-rule": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/extension-placeholder": "2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@tiptap/suggestion": "^2.0.3",
     "address": "^2.0.3",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.1.2",
@@ -104,6 +109,7 @@
     "close-with-grace": "^1.3.0",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
+    "daisyui": "^2.42.1",
     "codesandbox": "^2.2.3",
     "colorjs": "^0.1.9",
     "colorjs.io": "^0.5.2",
@@ -115,6 +121,7 @@
     "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
     "escape-goat": "^4.0.0",
+    "eventsource-parser": "^1.0.0",
     "execa": "^9.3.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
@@ -153,7 +160,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
+    "react-hot-toast": "^2.4.1",
     "react-use-measure": "^2.1.1",
+    "react-daisyui": "^2.4.6",
     "refractor": "^4.8.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
@@ -173,6 +182,7 @@
     "source-map-support": "^0.5.21",
     "spin-delay": "^2.0.0",
     "stripe": "^16.8.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
@@ -184,6 +194,7 @@
     "tween-functions": "^1.2.0",
     "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0",
+    "use-debounce": "^10.0.4",
     "vite-env-only": "^3.0.3",
     "vite-tsconfig-paths": "^5.0.1",
     "web-oidc": "^0.0.19",
@@ -200,6 +211,9 @@
     "@remix-run/testing": "2.10.3",
     "@sentry/vite-plugin": "^2.21.1",
     "@sly-cli/sly": "^1.14.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/dom": "^10.3.2",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
