--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@tiptap/extension-placeholder": "2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/html": "^2.9.1",
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
@@ -109,7 +110,6 @@
     "close-with-grace": "^1.3.0",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
-    "daisyui": "^2.42.1",
     "codesandbox": "^2.2.3",
     "colorjs": "^0.1.9",
     "colorjs.io": "^0.5.2",
@@ -117,6 +117,7 @@
     "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
+    "daisyui": "^2.42.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
@@ -158,11 +159,11 @@
     "prisma": "^5.17.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
+    "react-daisyui": "^2.4.6",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-hot-toast": "^2.4.1",
     "react-use-measure": "^2.1.1",
-    "react-daisyui": "^2.4.6",
     "refractor": "^4.8.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
