--- a/components.json
+++ b/components.json
@@ -5,11 +5,11 @@
 	"tailwind": {
 		"config": "tailwind.config.ts",
 		"css": "app/styles/tailwind.css",
-		"baseColor": "slate",
+		"baseColor": "neutral",
 		"cssVariables": true
 	},
 	"aliases": {
-		"components": "#app/components",
+		"components": "#app/interface/shadcn",
 		"utils": "#app/utils/misc.tsx"
 	}
 }
