--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/themes": "^3.1.4",
     "@react-email/components": "0.0.21",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/rapier": "^1.5.0",
     "@remix-run/express": "2.10.3",
     "@remix-run/node": "2.10.3",
     "@remix-run/react": "2.10.3",
@@ -143,11 +146,13 @@
     "isbot": "^5.1.13",
     "iso-639-1": "^3.1.3",
     "isomorphic-dompurify": "^2.15.0",
+    "leva": "^0.9.35",
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.1.0",
     "lucide-react": "^0.453.0",
     "luxon": "^3.5.0",
     "mdx-bundler": "^10.0.3",
+    "meshline": "^3.3.1",
     "morgan": "^1.10.0",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
@@ -164,6 +169,8 @@
     "react-dropzone": "^14.3.3",
     "react-highlight-words": "^0.20.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-three": "^0.9.7",
     "react-use-measure": "^2.1.1",
     "refractor": "^4.8.1",
     "rehype-autolink-headings": "^7.1.0",
@@ -191,6 +198,8 @@
     "tailwindcss-radix": "^3.0.3",
     "tar": "^7.4.3",
     "tar-stream": "^3.1.7",
+    "three": "^0.170.0",
+    "three-stdlib": "^2.34.0",
     "tiny-invariant": "^1.3.1",
     "tinycolor2": "^1.6.0",
     "tween-functions": "^1.2.0",
