--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-primitive": "^2.0.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/themes": "^3.1.4",
@@ -164,6 +166,7 @@
     "prisma": "^5.17.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-daisyui": "^2.4.6",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.3",
@@ -191,6 +194,7 @@
     "source-map-support": "^0.5.21",
     "spin-delay": "^2.0.0",
     "stripe": "^16.8.0",
+    "swiper": "^11.1.15",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.6",
