--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@portabletext/react": "^3.1.0",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -76,7 +77,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/themes": "^3.1.4",
     "@react-email/components": "0.0.21",
     "@react-three/drei": "^9.117.3",
@@ -110,7 +111,7 @@
     "better-sqlite3": "^11.1.2",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "close-with-grace": "^1.3.0",
     "cloudinary-build-url": "^0.2.4",
@@ -172,6 +173,7 @@
     "react-dropzone": "^14.3.3",
     "react-highlight-words": "^0.20.0",
     "react-hot-toast": "^2.4.1",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
     "react-three": "^0.9.7",
     "react-use-measure": "^2.1.1",
@@ -257,6 +259,7 @@
     "@types/set-cookie-parser": "^2.4.10",
     "@types/source-map-support": "^0.5.10",
     "@types/tar-stream": "^3.1.3",
+    "@types/three": "^0.170.0",
     "@types/tinycolor2": "^1.4.6",
     "@types/tween-functions": "^1.2.2",
     "@vitejs/plugin-react": "^4.3.1",
