--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "@sentry/remix": "^8.18.0",
     "@shikijs/vscode-textmate": "^9.3.0",
     "@sindresorhus/slugify": "^2.2.1",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tabler/icons-react": "^3.14.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-table": "^8.20.5",
@@ -175,6 +177,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-three": "^0.9.7",
     "react-use-measure": "^2.1.1",
     "refractor": "^4.8.1",
