--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/suggestion": "^2.0.3",
+    "@types/gsap": "^3.0.0",
     "address": "^2.0.3",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.1.2",
@@ -137,12 +138,13 @@
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
     "follow-redirects": "^1.15.9",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.14.4",
     "front-matter": "^4.0.2",
     "get-port": "^7.1.0",
     "glob": "^11.0.0",
     "gray-matter": "^4.0.3",
     "groq": "^3.56.0",
+    "gsap": "^3.12.5",
     "gunzip-maybe": "^1.4.2",
     "hast-util-to-html": "^9.0.3",
     "helmet": "^7.1.0",
@@ -153,6 +155,7 @@
     "isomorphic-dompurify": "^2.15.0",
     "leva": "^0.9.35",
     "litefs-js": "^1.1.2",
+    "locomotive-scroll": "^4.1.4",
     "lru-cache": "^10.1.0",
     "lucide-react": "^0.453.0",
     "luxon": "^3.5.0",
@@ -179,6 +182,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-three": "^0.9.7",
+    "react-use": "^17.6.0",
     "react-use-measure": "^2.1.1",
     "refractor": "^4.8.1",
     "rehype-autolink-headings": "^7.1.0",
@@ -250,6 +254,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
     "@types/gunzip-maybe": "^1.4.2",
+    "@types/locomotive-scroll": "^4.1.4",
     "@types/luxon": "^3.4.2",
     "@types/mdast": "^4.0.0",
     "@types/morgan": "^1.9.9",
