--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "leva": "^0.9.35",
     "litefs-js": "^1.1.2",
     "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
     "lru-cache": "^10.1.0",
     "lucide-react": "^0.453.0",
     "luxon": "^3.5.0",
@@ -255,6 +256,7 @@
     "@types/glob": "^8.1.0",
     "@types/gunzip-maybe": "^1.4.2",
     "@types/locomotive-scroll": "^4.1.4",
+    "@types/lodash": "^4.17.13",
     "@types/luxon": "^3.4.2",
     "@types/mdast": "^4.0.0",
     "@types/morgan": "^1.9.9",
